SDC-16937. Update UI icon to mark deprecated stages
Change-Id: I1242b8a5340480701af72d33711415d841b325f0
Reviewed-on: https://review.streamsets.net/c/datacollector/+/40894
Tested-by: StreamSets CI <streamsets-ci-spam@streamsets.com>
Reviewed-by: Sam Meyer <sam@streamsets.com>

--- a/datacollector-ui/src/main/webapp/app/home/stageLibrary/stageLibrary.less
+++ b/datacollector-ui/src/main/webapp/app/home/stageLibrary/stageLibrary.less
@@ -92,6 +92,8 @@
             position: absolute;
             top: 10px;
             left: 10px;
+            height: 15px;
+            width: 15px;
           }
 
           span {
