SDC-16943. Allow user to dismiss the warning and store in localstorage
Change-Id: Ia5d232b7fc4f9dca9824c0d4bb00a5e6737a46f1
Reviewed-on: https://review.streamsets.net/c/datacollector/+/40910
Tested-by: StreamSets CI <streamsets-ci-spam@streamsets.com>
Reviewed-by: Sam Meyer <sam@streamsets.com>

--- a/datacollector-ui/src/main/webapp/app/home/graph/graph.less
+++ b/datacollector-ui/src/main/webapp/app/home/graph/graph.less
@@ -91,5 +91,9 @@
   .alert-deprecated {
     position: unset;
     margin-bottom: 0px;
+
+    .dont-show-again {
+      margin-top: 0;
+    }
   }
 }
